# sstt

./: .gitignore  .zenodo.json  LICENSE  Makefile  README.md  REPL.md  dune-project  sstt-bin.opam  sstt-repl.opam  sstt-repl.opam.template  sstt-web.opam  sstt.opam
.github/workflows/: deploy.yml
benchmarks/: 0_hm.json  1_union_inter.json  2_dyn.json  3_records.json  run.sh
benchmarks/config/: 01_bdt_opt_sub_opt_tall.ml.pre  03_hc_opt_sub_opt_tall.ml.pre  04_ss_hc_opt_sub_opt_tall.ml.pre  05_bdt_naiv_sub_opt_tall.ml.pre  06_ss_naiv_sub_opt_tall.ml.pre  07_ss_opt_sub_naiv_tall.ml.pre  08_cduce.ml.pre
corpuses/: 1_union_inter.ml  2_dyn.ml
manual/: REPL.md  ROWPOLY.md
src/: TODO.md  dune  js.ml  native.ml  repl.ml  sstt.ml
src/cduce-dev/ocamliface/: mlcompat.cpp.ml  mlstub.real.ml  mltypes.real.ml
src/core/: arrows.ml  atoms.ml  base.ml  bdd.ml  core.ml  descr.ml  dnf.ml  dune  id.ml  intervals.ml  node.ml  records.ml  sigs.ml  sstt_core.ml  tagcomp.ml  tagged.ml  tags.ml  tdefs.ml  tdefs.mli  tuples.ml  vdescr.ml
src/core/components/: arrows.ml  atoms.ml  intervals.ml  records.ml  tags.ml  tuples.ml
src/core/utils/: bdd.ml  dnf.ml  id.ml  tagged.ml
src/doc/sstt/: index.mld
src/lib/cduce/: additions.ml  additions.mli  base.ml  base.mli
src/lib/repl/: dune  sstt_repl.ml
src/lib/repl/main/: main.ml  repl.ml  repl.mli
src/lib/repl/parsing/: ast.ml  ast.mli  cAst.ml  cAst.mli  dune  lexer.mll  parser.mly
src/lib/sstt/: dune  sstt.ml
src/lib/sstt/core/: base.ml  core.ml  descr.ml  node.ml  sigs.ml  vdescr.ml
src/lib/sstt/core/components/: arrows.ml  atoms.ml  enums.ml  fields.ml  intervals.ml  records.ml  tags.ml  tuples.ml
src/lib/sstt/core/utils/: DNF.ml  bdd.ml  bttable.ml  config.ml  dnf.ml  hash.ml  id.ml  indexed.ml  memtable.ml  memtable.mli  polymorphic.ml  tagged.ml  utils.ml
src/lib/sstt/types/: op.ml  op.mli  row.ml  row.mli  subst.ml  subst.mli  tallying.ml  tallying.mli  transform.ml  transform.mli  types.ml  witness.ml  witness.mli
src/lib/sstt/types/extensions/: abstracts.ml  abstracts.mli  bools.ml  bools.mli  chars.ml  chars.mli  floats.ml  floats.mli  hierarchy.ml  hierarchy.mli  maps.ml  maps.mli  strings.ml  strings.mli
src/lib/sstt/types/extensions/lists/: automaton.ml  lists.ml  lists.mli  regexp.ml
src/lib/sstt/types/printer/: prec.ml  printer.ml  printer.mli
src/lib/utils/: sstt_utils.ml
src/main/: dune  main.ml  output.ml  repl.ml  repl.mli  tests.ml  tests.txt  tests_ext.txt
src/parsing/: ast.ml  ast.mli  dune  lexer.mll  parser.mly  parsing.ml
src/stubs/: dune  runtime.wat
src/tests/: dune  test_witness.ml  tests.ml  tests.txt  tests_ext.txt
src/types/: dune  lists.ml  op.ml  op.mli  printer.ml  printer.mli  sstt_types.ml  subst.ml  subst.mli  tallying.ml  tallying.mli  transform.ml  transform.mli  types.ml
src/types/extensions/: abstracts.ml  abstracts.mli  bools.ml  bools.mli  chars.ml  chars.mli  floats.ml  floats.mli  strings.ml  strings.mli
src/types/extensions/lists/: automaton.ml  automaton.mli  lists.ml  lists.mli  regexp.ml  regexp.mli
src/types/lists/: automaton.ml  automaton.mli  lists.ml  lists.mli  regexp.ml  regexp.mli
src/types/printer/: prec.ml  printer.ml  printer.mli
src/utils/: automaton.ml  dune  fcf.ml  regexp.ml  regexp.mli  sstt_utils.ml  utils.ml
web/: .gitignore  doc.html  main.js  sstt.js  version.txt
web/doc/: index.html
web/doc/sstt/: index.html
web/doc/sstt-bin/: index.html
web/doc/sstt-repl/: index.html
web/doc/sstt-repl/Sstt_repl/: index.html
web/doc/sstt-repl/Sstt_repl/Ast/: index.html
web/doc/sstt-repl/Sstt_repl/CAst/: index.html
web/doc/sstt-repl/Sstt_repl/Colors/: index.html
web/doc/sstt-repl/Sstt_repl/IO/: index.html
web/doc/sstt-repl/Sstt_repl/Output/: index.html
web/doc/sstt-repl/Sstt_repl/Position/: index.html
web/doc/sstt-repl/Sstt_repl/Repl/: index.html
web/doc/sstt-repl/Sstt_repl/Version/: index.html
web/doc/sstt/Cduce/: index.html
web/doc/sstt/Cduce/Additions/: index.html
web/doc/sstt/Cduce/Base/: index.html
web/doc/sstt/Cduce/Tvar/: index.html
web/doc/sstt/Sstt/: index.html
web/doc/sstt/Sstt_utils/: index.html
web/wasm.bc.wasm.assets/: code-9d3477cb25b8d3929053.wasm  code-a9074ac072101fc38943.wasm
(+101 files in other folders)
