(library
 (name sstt_main)
 (public_name sstt-repl.main)
;  (package sstt-repl)
 (inline_tests (deps tests.txt))
 (libraries sstt_parsing sstt_utils sstt_types)
 (preprocess (pps ppx_expect))
 (modules (:standard)))

(rule
 (target version.ml)
 (action
  (write-file
   %{target}
   "let version = \"%{version:sstt}\"\nlet compiler = \"%{ocaml_version}\"\nlet commit = \"%{env:COMMIT=N/A}\"\n")))

; (env
;  (dev
;    (flags (:standard -warn-error -A))))